crates/pgls_pretty_print/tests/snapshots/single/tests__long_columns_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/long_columns_0.sql
snapshot_kind: text
---
SELECT
  customer_id,
  customer_name,
  customer_email,
  customer_phone
FROM
  customer_table;
