crates/pgls_pretty_print/tests/snapshots/single/tests__long_select_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/long_select_0_100.sql
snapshot_kind: text
---
SELECT first_name, last_name, email, phone_number, address FROM customers WHERE city = 'New York';
